force-app/main/default/objects/sAccount__c/sAccount__c.object-meta.xml
<CustomObject>
    <label>sAccount</label>
    <nameField>
        <label>sAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>