force-app/main/default/objects/sAccount__c/fields/field1__c.field-meta.xml
<CustomField>
    <fullName>field1__c</fullName>
    <label>field1</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>