force-app/main/default/objects/sAccount__c/fields/field2__c.field-meta.xml
<CustomField>
    <fullName>field2__c</fullName>
    <label>field2</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>