force-app/main/default/objects/sAccount__c/fields/field3__c.field-meta.xml
<CustomField>
    <fullName>field3__c</fullName>
    <label>field3</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>