force-app/main/default/objects/sAccount__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>sPAccount</label>
    <referenceTo>sPAccount__c</referenceTo>
    <relationshipLabel>sAccounts</relationshipLabel>
    <relationshipName>sAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>